[tool.poetry]
name = "data-visualization"
version = "0.1.0"
description = ""
authors = ["Ulrich Wilfried Motchoffo Kom <motchoffow@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.19.4"
scipy = "^1.5.4"
joblib = "^0.17.0"
scikit-learn = "^0.23.2"
seaborn = "^0.11.0"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
